# appletun

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/workflows/: codeql.yml  python-app.yml
appletun/: __main__.py
